--- a/nikhila/index.html
+++ b/nikhila/index.html
@@ -10,16 +10,16 @@
     <link type="text/css" rel="stylesheet" href="app.css">
 
 
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Bree+Serif|Gloria+Hallelujah|Indie+Flower|Josefin+Sans|Josefin+Slab|Just+Another+Hand|Kaushan+Script|Nunito|Pacifico|Permanent+Marker|Play|Poiret+One|Roboto+Mono|Sedgwick+Ave|Shadows+Into+Light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Wire+One|Fredericka+the+Great|Alex+Brush|Luckiest+Guy|Ultra|Frijole|Yellowtail|Monoton|Bree+Serif|Chewy|Gloria+Hallelujah|Indie+Flower|Josefin+Sans|Josefin+Slab|Just+Another+Hand|Kaushan+Script|Nunito|Pacifico|Permanent+Marker|Play|Poiret+One|Roboto+Mono|Sedgwick+Ave|Shadows+Into+Light" rel="stylesheet">
 
   </head>
-  <body>
+  <body  data-spy="scroll" data-target="#navpill" data-offset="70">
 
 
-    <nav id="navpill" class="navbar navbar-fixed-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <ul class="nav nav-pills">
-      <li class="nav-item">
+<nav id="navpill" class="navbar navbar-fixed-top navbar-dark bg-inverse">
+    <a id ="navi" class="navbar-brand " href="#">Ave Volando</a>
+    <ul id ="navo" class="nav nav-pills">
+      <li class="nav-item active">
         <a class="nav-link" href="#page1">
             <i class="fa fa-home " aria-hidden="true"></i>
         </a>
@@ -37,27 +37,16 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#mdo">
+        <a class="nav-link" href="#own">
           <i class="fa fa-birthday-cake" aria-hidden="true"></i>
           </a>
       </li>
 
       </li>
     </ul>
-  </nav>
-  <div data-spy="scroll" data-target="#navpill" data-offset="0">
-    <a href="#page1"></a>
+</nav>
 
-    <a href="#ammulu"></a>
 
-    <a href="#ammu"></a>
-
-    <a href="#ammu1"></a>
-
-    <a href="#fav"></a>
-    <a href="#slide"></a>
-
-  </div>
 
 
 
@@ -66,7 +55,7 @@
       <div id="cover-caption">
         <div class="container">
 
-          <div class="col-sm-12 col-sm-offset-1">
+          <div class="col-sm-10 col-sm-offset-1">
             <h1 id="niki" class="display-3">Hey!<br>HAppy Birthday<br> Nikhila</h1>
 
             <p class="sec_1_p1">
@@ -75,7 +64,7 @@
 
             <br>
 
-            <a href="#nav-main" class="btn btn-secondary-outline btn-sm" role="button">&darr;</a>
+
 
           </div>
         </div>
@@ -88,9 +77,9 @@
 <section id="ammulu">
 
 
-  <div id="div1" style="height: 500px;">
-      <div id="div2" style="height: inherit; overflow: auto; border:2px solid rgb(219, 81, 231);">
-          <div id="div3" style="height:1500px;border:2px solid rgb(29, 4, 48);">
+  <div id="div1" style="height: 600px;">
+      <div id="div2" style="height: inherit; overflow-y: auto; border:1px solid black;">
+          <div id="div3" style="height:1500px;border:1px solid black;">
 
 
                 <div class="container-fluid" id="ammu">
@@ -105,32 +94,38 @@
 
 
 
+
                     <div class="container-fluid" id="ammu1">
                           <div class="col-2">
-                          <h1 id="pg3">morocon stencil</h1>
+                          <h1 id="pg3">mexican cheese pizza</h1>
                           <p class="pg3">
-                            Might be wondering what that mean,Right!! <br>
-                            Your favorite selfie background.Try to figure it out.
+                            pizza freak! Enjoy at dominos with your family. <br> Have fun!!
+
+                          </p>
+                        </div>
+                    </div>
+
+
+                    <div class="container-fluid" id="ammu2">
+                          <div class="col-3">
+                          <h1 id="pg4">Pineapple Cake</h1>
+                          <p class="pg4">
+                            I still don't know why you prefer that flavor.Yak Yak!!
+
                           </p>
                         </div>
                     </div>
 
 
 
-                      <div class="container-fluid" id="fav">
 
-                          <p id="fav_p1">Many more favourites</p>
-                              <div id="favimg">
-                                 <img src="img/fav.png" class="img-fluid" alt=""media="screen">
-                              </div>
-                      </div>
 
 
           </div>
       </div>
   </div>
 
-        </section>
+    </section>
 
 
 
@@ -143,37 +138,56 @@
 
 
 <section id="slide">
-    <div id=".container-fluid">
-        <div id="carousel-home" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
+    <div id=".container-fluid ">
+        <div id="carousel-home" class="carousel slide " data-ride="carousel">
+            <ol class="carousel-indicators ">
                 <li data-target="#carousel-home" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-home" data-slide-to="1"></li>
                 <li data-target="#carousel-home" data-slide-to="2"></li>
+                <li data-target="#carousel-home" data-slide-to="3"></li>
+                <li data-target="#carousel-home" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <img src="carousel/Untitled.png" alt="Woman taking picture with a camera">
+                    <div class="carousel-item active">
+                        <img src="carousel/family.jpg" alt="Two hands making a heart">
+
+                        <div class="carousel-caption">
+                            <h3>Family love</h3>
+                            <p>Thank you aunty and uncle for giving me such an awesome friend</p>
+                        </div>
+                    </div>
+
+                <div class="carousel-item ">
+                    <img src="carousel/Untitled.jpg" alt="Woman taking picture with a camera">
 
                     <div class="carousel-caption">
-                        <h3>A woman with a camera</h3>
-                        <p>She is probably taking a picture</p>
+                        <h3>Bestie Love</h3>
+                        <p>I think they are glued together i hardly find one without the other two.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="carousel/niki2.png" alt="A wet spiderweb">
+                    <img src="carousel/niki2.jpg" alt="A wet spiderweb">
 
                     <div class="carousel-caption">
-                        <h3>Down came the rain</h3>
-                        <p>And washed the spider out</p>
+                        <h3>Brother love</h3>
+                        <p>Never saw you ending a day without talking about him. Lucky Bro.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="carousel/school.png" alt="Two hands making a heart">
+                    <img src="carousel/school.jpg" alt="Two hands making a heart">
 
                     <div class="carousel-caption">
-                        <h3>Making love</h3>
-                        <p>With their hands...</p>
+                        <h3>school love</h3>
+                        <p>Don't know or want to talk much about it. hehe!!</p>
                     </div>
+                  </div>
+                    <div class="carousel-item">
+                        <img src="carousel/north.jpg" alt="Two hands making a heart">
+
+                        <div class="carousel-caption">
+                            <h3>college love</h3>
+                            <p>Well! The most talkitive girl will defintely have more friends.Wishes from them</p>
+                        </div>
                 </div>
             </div>
             <a class="left carousel-control" href="#carousel-home" role="button" data-slide="prev">
@@ -187,6 +201,36 @@
         </div>
     </div>
   </section>
+
+  <div id="own" class="container-fluid">
+    <div class="row">
+      <div class="col-sm-6">
+        <img id="nik" src="img/nik.jpg" class="img-circle" alt="">
+      </div>
+      <div class="col-sm-6 vin">
+        <h1>finally my wishes</h1>
+        <p>firstly happy birthday nikhila!<br>you are the best person I have met in NIT <br> never let that smile leave your face that's the best party for me <br>Be my friend forever. <hr>wait wait!!Don't take it literally, ofcourse I need a party </p>
+      </div>
+    </div>
+  </div>
+
+
+    <div id="video" class="container-fluid" style="overflow-x:hidden;" >
+      <div>
+      <h3>Many More Wishes</h3>
+      <p>
+        video credits totally goes to keerthi thank you so much.
+      </p>
+      </div>
+
+    <div class="embed-responsive embed-responsive-16by9" >
+    <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/unqzNvMkpRc?ecver=1"></iframe>
+    </div>
+  </div>
+
+
+
+
 
   <footer id="footer-main">
       <div class="container">
@@ -204,7 +248,7 @@
                   </ul>
               </div>
               <div class="col-sm-3">
-                  <ul class="list-unstyled">
+                  <ul class=" list-unstyled icons">
                     <li>
                       <p>wish her at:</p>
                     </li>
@@ -212,19 +256,31 @@
                       <li><a href="https://www.instagram.com/ave_volando/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                       <br>
                       <li><a href="https://www.facebook.com/nikhila.munipalli"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                      <br>
+                      <li><a href="https://www.youtube.com/watch?v=unqzNvMkpRc&feature=youtu.be"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
 
 
                   </ul>
               </div>
               <div class="col-sm-3">
-                <p>content thakkuva undhi bootstrap 3 ki 4 ki confuse ayya em chestham malli chudu</p>
-                <a href="#page1"><i class="fa fa-arrow-up"  aria-hidden="true"></i></a>
+                <p>that's it <br> The End of <br>The great personal project</p>
+                <a href="#page1" class="btn btn-secondary-outline btn-sm" role="button">&uarr;</a>
 
 
               </div>
           </div>
       </div>
   </footer>
+
+
+
+
+
+
+<script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src=" https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="age.js"></script>
+
 
 
 
